--- a/src/style.css
+++ b/src/style.css
@@ -83,6 +83,7 @@ button:focus {
 }
 
 .navbar {
+  align-items: center;
   position: fixed !important;
   transition: all 0.3s ease-out 0s !important;
   padding: 0.3rem 2rem !important;
