--- a/src/style.css
+++ b/src/style.css
@@ -283,17 +283,17 @@ button:focus {
 }
 
 .main-name {
-  color: #cd5ff8;
+  color: #F2AA4CFF;
 }
 
 .Typewriter__wrapper {
   font-size: 2.2em !important;
-  color: #be6adf !important;
+  color: #F2AA4CFF !important;
   font-weight: 600 !important;
 }
 .Typewriter__cursor {
   font-size: 2.4em !important;
-  color: #b562d6 !important;
+  color: #F2AA4CFF !important;
 }
 
 @media (max-width: 767px) {
