--- a/src/style.css
+++ b/src/style.css
@@ -1,16 +1,15 @@
 html {
   --section-background-color: linear-gradient(
     to bottom left,
-    #12270bf2,
-    #11220bf2
+    rgb(13, 3, 3),rgb(13,3,3)
   );
 
   --image-gradient: linear-gradient(
     to bottom left,
-    #13280cf2,#13240df2
+    rgb(13, 3, 3),rgb(13,3,3)
   );
 
-  --imp-text-color: #266910f2;
+  --imp-text-color: #EE2525;
 }
 
 .purple {
@@ -31,7 +30,7 @@ button:focus {
   width: 100%;
   height: 100%;
   z-index: 999999;
-  background-color: #0c0513;
+  background-color: rgb(13, 3, 3);
   background-image: url(./Assets/pre.svg);
   background-repeat: no-repeat;
   background-position: center;
@@ -56,18 +55,18 @@ button:focus {
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: #2d1950;
+  background: rgb(13,3,3);
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: rgba(178, 121, 216, 0.959);
+  background: rgb(39, 14, 14);
   border-radius: 12px;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: rgba(222, 130, 235, 0.911);
+  background: rgb(39,14,14);
   border-radius: 12px;
 }
 
@@ -75,9 +74,9 @@ button:focus {
 /* Navbar Section  */
 /* --------- */
 .sticky {
-  background-color: #0c3b1ce0 !important;
+  background-color: rgb(38, 9, 9) !important;
   transition: all 0.3s ease-out 0s !important;
-  box-shadow: 0px 10px 10px 0px rgba(7, 62, 24, 0.827) !important;
+  box-shadow: 0px 10px 10px 0px  rgb(37, 7, 7) !important;
  backdrop-filter: blur(15px) !important;
 }
 
@@ -99,7 +98,7 @@ button:focus {
 
 .navbar-toggler span {
   display: block !important;
-  background-color: #be50f4 !important;
+  background-color: #EE2525 !important;
   height: 4px !important;
   width: 27px !important;
   margin-top: 5px !important;
@@ -146,7 +145,7 @@ button:focus {
   .navbar {
     padding: 1rem 2rem !important;
     font-size: 1.4rem !important;
-    background-color: #226312db !important;
+    background-color:  #EE2525 !important;
   }
   .navbar-nav .nav-item a::after {
     display: none !important;
@@ -196,7 +195,7 @@ button:focus {
   height: 5px;
   width: 0;
   border-radius: 16px;
-  background: #c95bf5;
+  background:  #EE2525;
   bottom: 1px;
   left: 0;
   z-index: -1;
@@ -283,17 +282,17 @@ button:focus {
 }
 
 .main-name {
-  color: #F2AA4CFF;
+  color:#EE2525;
 }
 
 .Typewriter__wrapper {
   font-size: 2.2em !important;
-  color: #F2AA4CFF !important;
+  color:#EE2525 !important;
   font-weight: 600 !important;
 }
 .Typewriter__cursor {
   font-size: 2.4em !important;
-  color: #F2AA4CFF !important;
+  color: #EE2525 !important;
 }
 
 @media (max-width: 767px) {
@@ -397,14 +396,14 @@ button:focus {
 }
 
 .icon-colour {
-  color: #700c86 !important;
+  color:rgb(24, 5, 5) !important;
 }
 
 /* --------- */
 /* Footer */
 /* --------- */
 .footer {
-  background-color: rgb(10, 4, 22);
+  background-color: rgb(13,3,3);
   bottom: 0 !important;
   padding-top: 10px !important;
   padding-bottom: 8px !important ;
@@ -472,7 +471,7 @@ button:focus {
 .project-card-view:hover {
   transform: scale(1.02) !important;
   overflow: hidden !important;
-  box-shadow: 0 4px 4px 5px rgba(129, 72, 144, 0.561) !important;
+  box-shadow: 0 4px 4px 5px rgb(42, 6, 6) !important;
 }
 
 .blog-card {
@@ -485,7 +484,7 @@ button:focus {
 
 .blog-card-view {
   background-color: transparent !important;
-  box-shadow: 0 3px 3px 2px rgba(145, 77, 161, 0.459) !important;
+  box-shadow: 0 3px 3px 2px rgb(24, 5, 5) !important;
   color: white !important;
   transition: all 0.5s ease 0s !important;
   height: 100% !important;
@@ -520,14 +519,14 @@ button:focus {
 
 .btn-primary {
   color: #fff !important;
-  background-color: #623686 !important;
-  border-color: #623686 !important;
+  background-color:rgb(24, 5, 5) !important;
+  border-color: rgb(24, 5, 5) !important;
 }
 
 .btn-primary:hover {
   color: #fff !important;
-  background-color: #6d20c5d7 !important;
-  border-color: #6d20c5d7 !important;
+  background-color: rgb(75, 17, 17) !important;
+  border-color:rgb(74, 17, 17) !important;
 }
 .btn:focus {
   outline: none !important;
@@ -576,7 +575,7 @@ button:focus {
 .tech-icons:hover {
   transform: scale(1.05) !important;
   overflow: hidden !important;
-  border: 2.2px solid rgba(197, 115, 230, 0.883) !important;
+  border: 2.2px solid rgb(74, 17, 17) !important;
 }
 .tech-icon-images {
   padding: 20px !important;
@@ -647,7 +646,7 @@ button:focus {
 .resume .resume-item {
   padding: 0 0 10px 25px;
   margin-top: -2px;
-  border-left: 2px solid #8a49a8;
+  border-left: 2px solid rgb(94, 15, 15);
   position: relative;
 }
 
@@ -694,8 +693,8 @@ button:focus {
 }
 
 .like-btn {
-  background-color: #934cce5e !important;
-  border-color: #934cce5e !important;
+  background-color: rgb(94, 15, 15) !important;
+  border-color: rgb(94, 15, 15) !important;
   padding: 0.25rem 0.98rem !important;
   border-radius: 5px !important;
   line-height: 1.4 !important;
@@ -704,8 +703,8 @@ button:focus {
 
 .like-btn:hover {
   transform: translateY(-2px) !important;
-  background-color: #a24dd386 !important;
-  border-color: #a24dd386 !important;
+  background-color: rgb(94, 15, 15) !important;
+  border-color: rgb(59, 7, 7) !important;
 }
 
 .animate-like {
@@ -729,7 +728,7 @@ button:focus {
 
 .fork-btn-inner {
   line-height: 1.4em !important;
-  background-color: #934cce5e !important;
+  background-color: rgb(65, 0, 0) !important;
   padding: 0.25rem 1.1rem !important;
   vertical-align: middle !important;
   text-align: center !important;
@@ -737,8 +736,8 @@ button:focus {
 
 .fork-btn-inner:hover {
   transform: translateY(-2px) !important;
-  background-color: #a24dd386 !important;
-  border-color: #a24dd386 !important;
+  background-color: rgb(48, 12, 12) !important;
+  border-color: rgb(42, 11, 11) !important;
 }
 .fork-btn-inner::after {
   display: none !important;
