--- a/src/index.css
+++ b/src/index.css
@@ -4,5 +4,5 @@ body {
   font-family: "Raleway", serif !important;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-image: linear-gradient(to left,#000,#000);
+  background-image: linear-gradient(to left,rgb(13, 3, 3),rgb(13,3,3));
 }
